OO-3799: highlight def. quota, better guess def. quota in editor
Springify CP manager, highlight the default quota in the quota view and
editor, better guess the default quota in editor if none available base
on type of resource